--- a/app/src/main/res/drawable/home_background_overlay.xml
+++ b/app/src/main/res/drawable/home_background_overlay.xml
@@ -1,6 +1,6 @@
 <!-- overlay.xml -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/homebackground" />
+    <item android:drawable="@drawable/homebackground2" />
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#E6121111" />
