--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,14 @@
         <item name="android:thumb">@drawable/custom_seekbar_thumb</item>
     </style>
 
+    <style name="AppNameTextStyle">
+        <!-- Add any other style attributes as needed -->
+        <item name="android:fontFamily">@font/big_space</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <!-- Add any other style attributes as needed -->
+    </style>
+
 
     <!--Farah Styles-->
     <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
