--- a/app/src/main/res/drawable/buttons.xml
+++ b/app/src/main/res/drawable/buttons.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:startColor="#521b5a"
-        android:endColor="#b83232"
-        android:angle="4"
-     />
+    <solid android:color="#B6BBC4" />
     <corners android:radius="8dp" />
 </shape>
