--- a/app/src/main/res/drawable/gray_one.xml
+++ b/app/src/main/res/drawable/gray_one.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="35dp"/>
-
-            <solid android:color="#F2EDED"/>
+            <corners android:radius="8dp"/>
+            <solid android:color="#C6F0ECE5"/>
         </shape>
     </item>
 </selector>
