--- a/app/src/main/res/drawable/personal_info_ohai.xml
+++ b/app/src/main/res/drawable/personal_info_ohai.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#CABEBE"/>
+            <solid android:color="#F0ECE5"/>
         </shape>
     </item>
 </selector>
