--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/profile_overlay"
     tools:context=".Activities.ProfileActivity">
 
 
@@ -24,19 +25,18 @@
         <View
             android:id="@+id/view"
             android:layout_width="wrap_content"
-            android:layout_height="340dp"
-            android:background="@drawable/for_profile_background"
+            android:layout_height="30dp"
+            android:background="@color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:layout_marginTop="22dp"
-
-            app:cardBackgroundColor="#FFFFFF"
+            app:cardBackgroundColor="@color/transparent"
             app:cardCornerRadius="150dp"
             app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,13 +61,9 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:text="My Profile"
             android:textColor="@color/white"
-            android:textSize="45dp"
+            android:textSize="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
@@ -75,7 +71,7 @@
             android:layout_width="360dp"
             android:layout_height="300dp"
             android:layout_marginTop="28dp"
-            android:background="@drawable/buttons"
+            android:background="@color/transparent"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
@@ -85,7 +81,7 @@
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@drawable/gray_one"
+              android:background="@drawable/navbar_background"
               android:orientation="horizontal">
 
             <LinearLayout
@@ -110,10 +106,18 @@
                   android:layout_height="wrap_content"
                   android:text="Favorite"
                   android:textAlignment="center"
-                  android:textColor="@color/black"
+                  android:textColor="@color/white"
                   android:textSize="18dp"
                   android:textStyle="bold" />
             </LinearLayout>
+
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#FFFFFF"
+                />
+
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -136,7 +140,7 @@
                   android:layout_height="wrap_content"
                   android:text="PlayList"
                   android:textAlignment="center"
-                  android:textColor="@color/black"
+                  android:textColor="@color/white"
                   android:textSize="18dp"
                   android:textStyle="bold" />
             </LinearLayout>
@@ -147,18 +151,18 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="15dp"
-              android:orientation="horizontal">
+              android:orientation="horizontal"
+              android:gravity="center">
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="Username"
-                android:textColor="#FFFFFF"
+                android:text="username"
+                android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="@+id/cardView"
-                android:layout_marginLeft="85dp"
                 app:layout_constraintHorizontal_bias="0.516"
                 app:layout_constraintStart_toStartOf="@+id/cardView"
                 app:layout_constraintTop_toBottomOf="@+id/cardView" />
@@ -175,7 +179,8 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="15dp"
-              android:orientation="horizontal">
+              android:orientation="horizontal"
+              android:gravity="center"  >
 
 
             <TextView
@@ -184,7 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="Email:"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="@+id/username"
                 app:layout_constraintStart_toStartOf="@+id/username"
