--- a/app/src/main/res/layout/activity_choose_playlist.xml
+++ b/app/src/main/res/layout/activity_choose_playlist.xml
@@ -9,14 +9,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlistsRecycleView"
-        android:layout_width="380dp"
-        android:layout_height="496dp"
+        android:layout_width="377dp"
+        android:layout_height="547dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.705" />
+        app:layout_constraintVertical_bias="0.928" />
 
     <ImageButton
         android:id="@+id/backButton"
@@ -33,17 +33,16 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="331dp"
-        android:layout_height="33dp"
-        android:text="Pick Your Playlist and Dive into the Music."
+        android:layout_width="377dp"
+        android:layout_height="46dp"
+        android:fontFamily="@font/androidassassin"
+        android:text="Pick Your Playlist, Set The Vibe!"
         android:textColor="@color/thisWhiteColor"
-        android:textSize="15dp"
-        android:textStyle="bold"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.662"
+        app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.111" />
-
+        app:layout_constraintVertical_bias="0.096" />
 </androidx.constraintlayout.widget.ConstraintLayout>
