--- a/app/src/main/res/layout/fragment_choose_playlist.xml
+++ b/app/src/main/res/layout/fragment_choose_playlist.xml
@@ -1,20 +1,25 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     tools:context=".fragment.PlaylistFragment">
-
-    <ImageButton
-        android:id="@+id/playlistImageButton"
-        style="@style/MyImageButtonStyle"
-        android:layout_width="160dp"
-        android:layout_height="169dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="100dp"
+        android:layout_height="109dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:radius="50dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/rhythemix" />
+        app:cardCornerRadius="1500dp"
+        android:elevation="8dp">
+        <ImageView
+            android:id="@+id/playlistImageButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/rhythemix" />
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,10 +27,9 @@
         android:orientation="vertical"
         android:layout_marginStart="16dp">
     </LinearLayout>
-
     <TextView
         android:id="@+id/playlistTitle"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/ios_bold"
